fix typeahead overlapping issue

--- a/features/org.wso2.carbon.analytics.is.feature/src/main/capp/GadgetHorizontalBarChart_1.0.0/Horizontal_Bar_Chart/css/custom.css
+++ b/features/org.wso2.carbon.analytics.is.feature/src/main/capp/GadgetHorizontalBarChart_1.0.0/Horizontal_Bar_Chart/css/custom.css
@@ -21,6 +21,9 @@
 
 #autocomplete-search-box .typeahead{
     vertical-align: middle !important;
+    border-radius: 0px;
+    margin: 0px 0px 0px 10px;
+    width: 90%;
 }
 
 span.twitter-typeahead {
@@ -50,9 +53,6 @@ input.typeahead.tt-hint{
 }
 
 #add-filter {
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
     height: 20px;
     font-size: 12px;
     text-align: center;
@@ -60,9 +60,6 @@ input.typeahead.tt-hint{
 }
 
 #remove-filter{
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
     height: 20px;
     width: 20px;
     padding: 0px;
